one more section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 <section class="header">
     <div class="top-navbar container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar  navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
                   <img src="assets/images//logo.png" class="top-logo">
@@ -92,6 +92,66 @@
           </div>
     </div>
 </section>
+
+<!-- section two start here -->
+  <section class="degen-two">
+    <div class="container-fluid">
+      <div class="outer">
+        <div class="play-now">
+          <h2 class="text-center">Play Now</h2>
+        </div>
+        <div class="img-section">
+          <!-- <div class="row">
+            <div class="col-md-12">
+              <img src="assets/images/degen2-bg.png" class="img-fluid">
+            </div>
+          </div> -->
+        </div>
+        <div class="container cards-section">
+          <div class="row">
+            <div class="col-md-4 mt-3 mt-md-0">
+              <div class="card">
+                <img src="assets/images/two-card1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">DEGEN SCRATCH</h5>
+                  <p class="card-text">The ultimate scratch game metus, in ullamcorper nunc. Vivamus quis ligula ipsum. Duis at consectetur quam. </p>
+                  <h5 class="footer-title">PLAY Degen Scratch</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mt-3 mt-md-0">
+              <div class="card">
+                <img src="assets/images/two-card2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">DICE GAME</h5>
+                  <p class="card-text">The ultimate scratch game metus, in ullamcorper nunc. Vivamus quis ligula ipsum. Duis at consectetur quam. </p>
+                  <h5 class="footer-title">PLAY DICE GAME</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mt-3 mt-md-0">
+              <div class="card">
+                <img src="assets/images/two-card3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">DEGEN LOTTERY</h5>
+                  <p class="card-text">The ultimate scratch game metus, in ullamcorper nunc. Vivamus quis ligula ipsum. Duis at consectetur quam. </p>
+                  <h5 class="footer-title">PLAY DEGEN LOTTERY</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
+    <h1 class="text-light">Check</h1>
+  </section>
+
+  <!-- section two end here -->
+
 </body>
 
 
