--- a/index.html
+++ b/index.html
@@ -381,6 +381,15 @@
 
 
       <!-- section five end -->
+      <!-- section footer start -->
+      <section class="footer container">
+          <div class="row">
+            <div class="col-md-12">
+              <h6 class="footer-text text-center">©2022 DEGEN GAMES</h6>
+            </div>
+          </div>
+      </section>
+      <!-- section footer end -->
    </body>
    <script src="assets/js/jquery.min.js"></script>
    <script src="assets/js/owl.carousel.js"></script>
