--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                   </div>
                </div>
             </div>
-            <div class="counting-main-outer d-flex align-items-start justify-content-start justify-content-md-center flex-wrap">
+            <div class="counting-main-outer d-flex align-items-start justify-content-start flex-wrap">
                <div class="counting-main mt-4 ">
                   <div class="number-div">
                      <img src="assets/images/count1.png">
