--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
                   </div>
                </div>
             </div>
-            <div class="counting-main-outer d-flex align-items-start justify-content-start flex-wrap">
+            <div class="counting-main-outer d-flex align-items-start justify-content-center flex-wrap">
                <div class="counting-main mt-4 ">
                   <div class="number-div">
-                     <img src="assets/images/count1.png">
+                     <img src="assets/images/1.png">
                   </div>
                   <div class="counting-body d-flex align-items-start">
                      <div class="me-3">
@@ -221,7 +221,7 @@
                </div>
                <div class="counting-main mt-4 ">
                   <div class="number-div">
-                     <img src="assets/images/count2.png">
+                     <img src="assets/images/2.png">
                   </div>
                   <div class="counting-body d-flex align-items-start">
                      <div class="me-3">
@@ -238,7 +238,7 @@
                </div>
                <div class="counting-main mt-4 ">
                   <div class="number-div">
-                     <img src="assets/images/count3.png">
+                     <img src="assets/images/3.png">
                   </div>
                   <div class="counting-body d-flex align-items-start">
                      <div class="me-3">
@@ -267,7 +267,7 @@
                </div>
                <div class="counting-main mt-4 ">
                   <div class="number-div">
-                     <img src="assets/images/count4.png">
+                     <img src="assets/images/4.png">
                   </div>
                   <div class="counting-body d-flex align-items-start">
                      <div class="me-3">
@@ -284,7 +284,7 @@
                </div>
                <div class="counting-main mt-4 ">
                   <div class="number-div">
-                     <img src="assets/images/count5.png">
+                     <img src="assets/images/5.png">
                   </div>
                   <div class="counting-body d-flex align-items-start">
                      <div class="me-3">
